# VIGIL

./: .gitignore  Cargo.toml  DEMO_SCRIPT.md  LICENSE  PROPOSAL.md  README.md  README2.md  THREAT_MODEL.md  deny.toml  flake.nix  install.ps1  install.sh  rust-toolchain.toml  vigil.service  vigil.toml.example
.cargo/: config.toml
crates/vigil-core/: Cargo.toml
crates/vigil-core/src/: audit.rs  config.rs  constants.rs  crypto.rs  error.rs  lib.rs  playbook.rs  tpm.rs  types.rs
crates/vigil-detect/: Cargo.toml
crates/vigil-detect/src/: detectors.rs  engine.rs  features.rs  lib.rs  ml.rs  results.rs  stats.rs
crates/vigil-ingest/: Cargo.toml
crates/vigil-ingest/src/: lib.rs  parser.rs  pipeline.rs  sink.rs  validator.rs
crates/vigil-llm/: Cargo.toml
crates/vigil-llm/src/: lib.rs
crates/vigil-store/: Cargo.toml
crates/vigil-store/src/: lib.rs
crates/vigil-synth/: Cargo.toml
crates/vigil-synth/src/: anomalies.rs  generator.rs  lib.rs  profiles.rs  scenarios.rs
