[package]
name = "vigil-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core types, error handling, and cryptographic primitives for VIGIL"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
bincode = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
ipnet = { workspace = true }
bytes = { workspace = true }
toml = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
