[package]
name = "vigil-ingest"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Async telemetry ingestion pipeline for VIGIL"

[dependencies]
vigil-core = { path = "../vigil-core" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true, features = ["raw_value"] }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
async-channel = { workspace = true }
bytes = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }
